--- a/templates/_include-block-components/modul_teaserAngebote.twig
+++ b/templates/_include-block-components/modul_teaserAngebote.twig
@@ -35,7 +35,7 @@
 
                     <div class="teaserAngeboteRechts">
 
-                        <div class="teaserAngeboteRechtsImg" style="background-image: url('{{ imgSrc }}')">
+                        <div class="teaserAngeboteRechtsImg" style="background-color: {{ backgroundColor }}; background-image: url('{{ imgSrc }}')">
                             <div class="teaserAngeboteRechtsVerlauf verlaufWidth-50" style="background-image: linear-gradient(to right, {{ backgroundColor }}, transparent);">
                                 <div class="teaserAngeboteRechtsVerlauf verlaufWidth-90" style="background-image: linear-gradient(to right, {{ backgroundColor }}, transparent);">
                                     <div class="teaserAngeboteRechtsVerlauf verlaufWidth-100" style="background-image: linear-gradient(to right, {{ backgroundColor }}, transparent);">
