--- a/assets/sccs/components/_modul-bildAccordion.scss
+++ b/assets/sccs/components/_modul-bildAccordion.scss
@@ -2,6 +2,8 @@ $breakpoint-text: 1200;
 
 .modul-bildAccordion{
 
+
+
   .accordionSpacerTop{
     @include dynamic-distance(30, 50, padding-top);
   }
@@ -29,11 +31,26 @@ $breakpoint-text: 1200;
     }
 
     .modulbild{
+      display: block;
+      width: 100%;
+      position: relative;
+      height: 100%;
+
+      .slick-slide{
+        display: block!important;
+        picture,img{
+          display: block!important;
+        }
+      }
+
+
+
       img{
         border-radius: 30px;
         @include wl-breakpoint(1200) {
           margin-bottom: 5px;
         }
+
       }
 
 
