--- a/templates/_extends-elements/templ_produkt-detail.twig
+++ b/templates/_extends-elements/templ_produkt-detail.twig
@@ -67,6 +67,8 @@
     {% set logoleisteSlider = 0 %}
     {% set bilderMitZoom = 0 %}
     {% set haendlerFilter = 0 %}
+    {% set accordionBild = 0 %}
+    {% set bildAccordion = 0 %}
     {% for block in matrixElemente %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
       {% if block.type.handle == 'haendlerFilter' %}
@@ -84,6 +86,24 @@
           {% set assetsArr = assetsArr|merge({ (counter)  :  '<script type="text/javascript" src="/assets/js/lightboxed.min.js"></script>' }) %}
         {% endif %}
         {% set bilderMitZoom = bilderMitZoom + 1 %}
+      {% endif %}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {% if block.type.handle == 'accordionBild' %}
+        {% set counter = counter + 1 %}
+        {% if accordionBild == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-InfoTeaser-textBildTeaser-History-Team.min.css">' }) %}
+        {% endif %}
+        {% set accordionBild = accordionBild + 1 %}
+      {% endif %}
+      {# -------------------------------------------------------------------------------------------------------------------------------- #}
+      {% if block.type.handle == 'bildAccordion' %}
+        {% set counter = counter + 1 %}
+        {% if bildAccordion == 0 %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<script defer src="/assets/js/slick.min.js"></script>' }) %}
+          {% set assetsArr = assetsArr|merge({ (counter)  :  '<link defer rel="stylesheet" href="/assets/css/slick-InfoTeaser-textBildTeaser-History-Team.min.css">' }) %}
+        {% endif %}
+        {% set bildAccordion = bildAccordion + 1 %}
       {% endif %}
       {# -------------------------------------------------------------------------------------------------------------------------------- #}
     {% endfor %}
