--- a/templates/_include-block-components/modul_bildAccordion.twig
+++ b/templates/_include-block-components/modul_bildAccordion.twig
@@ -13,7 +13,24 @@
                 'mode' : 'crop'
             }
         } %}
+
+        {% set settingsBildHoeheFix = {
+            '0-1100' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            },
+            '1-900' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            },
+            '2-450' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            }
+        } %}
         {% set image = block.bild.one()|default(false) %}
+{# ###################################################################################################### #}
+  {% set auswahlAusgabeBild = block.auswahlAusgabeBild.value %}
 {# ###################################################################################################### #}
 
 <div class="anchor" id="{{ 'anker' ~ blockid }}"></div>
@@ -25,11 +42,36 @@
 
             <div class="containerBild">
 
+                {% if auswahlAusgabeBild == 'bildHoeheFix' %}
                     {% if image %}
                         <div class="modulbild">
                             {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settings, image: image, imageSize: '650x366', imageMode: 'crop'} %}
                         </div>
                     {% endif %}
+                {% endif %}
+
+                {% if auswahlAusgabeBild == 'bildHoeheVariabel' %}
+                    {% if image %}
+                        <div class="modulbild">
+                            {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settingsBildHoeheFix, image: image, imageSize: '650x', imageMode: 'crop'} %}
+                        </div>
+                    {% endif %}
+                {% endif %}
+
+                {% if auswahlAusgabeBild == 'bildWechselFadeEffekt' %}
+                    {% set fadeBilder = block.fadeBilder.one()|default(false) %}
+                    {% if fadeBilder %}
+                        <div class="modulbild">
+                            <div id="fadeEffekt{{ blockid }}" class="imgSliderFadeEffektContainer">
+                            {% for image in block.fadeBilder.all() %}
+                                {% if image %}
+                                    {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settingsBildHoeheFix, image: image, imageSize: '650x', imageMode: 'crop'} %}
+                                {% endif %}
+                            {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endif %}
 
             </div>
 
@@ -82,4 +124,20 @@
     </section>
 </section>
 
+<script>
+    $(document).ready(function() {
+
+        $('#fadeEffekt{{ blockid }}').slick({
+            autoplay: true,
+            autoplaySpeed: 5000,
+            fade: true,
+            dots: false,
+            speed: 2000,
+            pauseOnHover: false,
+            infinite: true,
+            cssEase: 'linear'
+        });
+
+    });
+</script>
 
