--- a/templates/_include-block-components/modul_sliderTeam.twig
+++ b/templates/_include-block-components/modul_sliderTeam.twig
@@ -56,21 +56,20 @@
     </section>
 </section>
 
+
 <script>
     $(document).ready(function() {
 
-        $('#slider-team{{ blockid }}').slick({
-            dots: false,
-            infinite: true,
-            speed: 1000,
-            autoplay: false,
-            autoplaySpeed: 1000,
-            slidesToShow: 1,
-            slidesToScroll: 1,
+        $('#fadeEffekt{{ blockid }}').slick({
+            autoplay: true,
+            autoplaySpeed: 5000,
             fade: true,
+            dots: false,
+            speed: 1200,
+            pauseOnHover: false,
+            infinite: true,
+            cssEase: 'linear'
         });
 
     });
-
-
 </script>
