--- a/templates/_include-block-components/modul_textBild_BildText.twig
+++ b/templates/_include-block-components/modul_textBild_BildText.twig
@@ -15,6 +15,21 @@
                 'mode' : 'crop'
             }
         } %}
+
+        {% set settingsBildHoeheVariabel = {
+            '0-1100' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            },
+            '1-900' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            },
+            '2-450' : {
+                'size' : '650x',
+                'mode' : 'crop'
+            }
+        } %}
         {% set image = block.bild.one()|default(false) %}
         {% set modul = block.layoutWechsel.value %}
         {% set youTubeUrl = block.youTubeUrl|default(false) %}
@@ -69,12 +84,12 @@
                     {% if ( button1 and block.button1.getUrl() != '' ) or ( button2 and block.button2.getUrl() != '' ) %}
                         <div class="button-container">
                             <span class="btn1">
-                            {% if button1  and block.button1.getUrl() != '' %}
+                            {% if button1 and block.button1.getUrl() != '' %}
                                 {{ _self.linkList( button1, 'btn' ) | trim | raw  }}
                             {% endif %}
                             </span>
                             <span class="btn2">
-                            {% if button2  and block.button2.getUrl() != '' %}
+                            {% if button2 and block.button2.getUrl() != '' %}
                                 {{ _self.linkList( button2, 'btn' ) | trim | raw  }}
                             {% endif %}
                             </span>
@@ -90,6 +105,14 @@
                         {% if image %}
                             <div class="modulbild">
                                 {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settings, image: image, imageSize: '650x366', imageMode: 'crop'} %}
+                            </div>
+                        {% endif %}
+                    {% endif %}
+
+                    {% if bildYoutubeAuswahl == 'bildHoeheVariabel' %}
+                        {% if image %}
+                            <div class="modulbild">
+                                {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settingsBildHoeheVariabel, image: image, imageSize: '650x', imageMode: 'crop'} %}
                             </div>
                         {% endif %}
                     {% endif %}
@@ -146,6 +169,14 @@
                         {% if image %}
                             <div class="modulbild">
                                 {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settings, image: image, imageSize: '650x366', imageMode: 'crop'} %}
+                            </div>
+                        {% endif %}
+                    {% endif %}
+
+                    {% if bildYoutubeAuswahl == 'bildHoeheVariabel' %}
+                        {% if image %}
+                            <div class="modulbild">
+                                {% include '_include-vendor/image-picture.twig' with {class: 'modul-img', sourceMediaSettings: settingsBildHoeheVariabel, image: image, imageSize: '650x', imageMode: 'crop'} %}
                             </div>
                         {% endif %}
                     {% endif %}
