--- a/templates/_include-core/macros.twig
+++ b/templates/_include-core/macros.twig
@@ -14,7 +14,7 @@
     {% else %}
          {% set mailText = element.getUrl()|replace({'mailto:': ''}) %}
     {% endif %}
-    <a href="mailto:{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>{{ mailText }}</a>
+    <a href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>{{ mailText }}</a>
 {% elseif  type == 'entry' %}
     <a href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>{{ customText|raw }}</a>
 {% elseif  type == 'tel' %}
@@ -40,7 +40,7 @@
 {% macro linkListOnlyAtag(element, className) %}
     {% if className != '' %}{% set class = ' class="' ~ className ~'"' %}{% else %}{% set class = '' %}{% endif %}
     {% set type = element.type %}{# asset, email, entry, tel, url, custom #}{% if type == 'email' %}
-    <a href="mailto:{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>
+    <a href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>
 {% elseif  type == 'entry' %}
     <a href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}{{ class|raw }}>
 {% elseif  type == 'tel' %}
